Fix playsinline attribute for videos

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <section class="hero-section autoBlur">
             <div class="hero-vid">
-                <video loop autoplay muted plays-inline class="hero-video">
+                <video loop autoplay muted playsinline class="hero-video">
                     <source src="videos/hero-1.mp4" type="video/mp4">
                 </video>
 
                 <div class="hero-info">
                     <h1>REDEFINE</h1>
-                    <p1>Enter the metagame Layer<p1><br>    
-                    </p1> Unleash the play Economy</p1><br><br>
+                    <p>Enter the metagame Layer<p><br>    
+                    <p> Unleash the play Economy</p><br><br>
                     <button>Watch Trailer</button>
                 </div>
                 <h1><div class="gaming-text">Gaming</div></h1>
@@ -68,7 +68,11 @@
                 <h1>REDIENT</h1>
                 <p>An anime and gamming inspired NFT - collection the IP primed for expansion.</p>
 
-                <video src="videos/feature-1.mp4" autoplay loop muted plays-inline></video>
+                
+                <video autoplay loop muted playsinline>
+                  <source src="videos/feature-1.mp4" type="video/mp4">
+                </video>
+
                 <button>COMING SOON</button>
              </div>
 
@@ -76,7 +80,7 @@
                 <h1>ZIGMA</h1>
                 <p>A cross-plateform metagame app, turning your activities across web2 and web3 games</p>
 
-                <video src="videos/feature-2.mp4" autoplay loop muted plays-inline></video>
+                <video src="videos/feature-2.mp4" autoplay loop muted playsinline></video>
                 <button>COMING SOON</button>
              </div>
 
@@ -84,7 +88,7 @@
                 <h1>NEXUS</h1>
                 <p>A gamified social hub, adding a new diamention of play to social intraction for web3 community</p>
 
-                <video src="videos/feature-3.mp4" autoplay loop muted plays-inline></video>
+                <video src="videos/feature-3.mp4" autoplay loop muted playsinline></video>
                 <button>COMING SOON</button>
              </div>
 
@@ -93,12 +97,15 @@
                 <h1>AZUL</h1>
                 <p>A cross-word AI agent - eleveting your gameplay to be more fun and productive</p>
 
-                <video src="videos/feature-4.mp4" autoplay loop muted plays-inline></video> 
+                <video src="videos/feature-4.mp4" autoplay loop muted playsinline></video> 
                 <button>COMING SOON</button> 
              </div>
 
              <div class="card autoDisplay">
-                <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>  
+                <video autoplay loop muted playsinline>
+                 <source src="videos/feature-5.mp4" type="video/mp4">
+                </video>
+
              </div>
 
              <div class="card autoDisplay">
