--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
                 <div class="hero-info">
                     <h1>REDEFINE</h1>
-                    <p>Enter the metagame Layer<p><br>    
-                    <p> Unleash the play Economy</p><br><br>
+                    <p>Enter the metagame Layer<p>    
+                    <p> Unleash the play Economy</p><br>
                     <button>Watch Trailer</button>
                 </div>
                 <h1><div class="gaming-text">Gaming</div></h1>
