--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
             <h4>Game of Games begins-your life, now an epic MMORPG</h4>
-            <h5>Zentry units every prayer from countless games and platforms, both digital and physical into a unified Play Economy</h5>
+            <h5>Zentry unites every player from countless games and platforms, both digital and physical into a unified Play Economy</h5>
 
         </section>
         
@@ -66,7 +66,7 @@
            <div class="info-cards">
              <div class="card autoDisplay">
                 <h1>REDIENT</h1>
-                <p>An anime and gamming inspired NFT - collection the IP primed for expansion.</p>
+                <p>An anime and gaming inspired NFT - collection the IP primed for expansion.</p>
 
                 
                 <video autoplay loop muted playsinline>
@@ -78,7 +78,7 @@
 
              <div class="card autoDisplay">
                 <h1>ZIGMA</h1>
-                <p>A cross-plateform metagame app, turning your activities across web2 and web3 games</p>
+                <p>A cross-platform metagame app, turning your activities across web2 and web3 games</p>
 
                 <video src="videos/feature-2.mp4" autoplay loop muted playsinline></video>
                 <button>COMING SOON</button>
@@ -86,7 +86,7 @@
 
              <div class="card autoDisplay">
                 <h1>NEXUS</h1>
-                <p>A gamified social hub, adding a new diamention of play to social intraction for web3 community</p>
+                <p>A gamified social hub, adding a new dimension of play to social interaction for web3 community</p>
 
                 <video src="videos/feature-3.mp4" autoplay loop muted playsinline></video>
                 <button>COMING SOON</button>
@@ -95,7 +95,7 @@
 
              <div class="card autoDisplay">
                 <h1>AZUL</h1>
-                <p>A cross-word AI agent - eleveting your gameplay to be more fun and productive</p>
+                <p>A cross-world AI agent - eleveting your gameplay to be more fun and productive</p>
 
                 <video src="videos/feature-4.mp4" autoplay loop muted playsinline></video> 
                 <button>COMING SOON</button> 
@@ -109,7 +109,7 @@
              </div>
 
              <div class="card autoDisplay">
-                <h1>MORE COMMING SOON</h1>
+                <h1>MORE COMING SOON</h1>
              </div>
 
            </div>
@@ -117,7 +117,7 @@
 
         <section class="contact-section">
             <p>Join Zentry</p>
-            <h1>LET'S BUILD THE NEW ERA OF GAMMING TOGETHER</h1>
+            <h1>LET'S BUILD THE NEW ERA OF GAMING TOGETHER</h1>
             <button>CONTACT US</button>
             <img class="img1" src="img/swordman.webp" alt="contact-img">
             <img class="img2" src="img/contact-1.webp" alt="contact-img">
